# Simple-Model-Inference-API

./: .coverage  .dockerignore  .env.aws.template  .env.shared  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.sagemaker  docker-compose.gpu.yml  docker-compose.monitoring.yml  docker-compose.yml
monitoring/: prometheus.yml
requirements/: cpu.in  cpu.txt  cuda-cu126.in  cuda-cu126.txt  dev.gpu.in  dev.gpu.txt  dev.in  dev.txt  load.txt  prod.in  prod.txt
results/cpu/onnx/: run_128users_stats.csv  run_128users_stats_history.csv  run_16users_stats.csv  run_16users_stats_history.csv  run_1users_stats.csv  run_1users_stats_history.csv  run_256users_stats.csv  run_256users_stats_history.csv  run_2users_stats.csv  run_2users_stats_history.csv  run_32users_stats.csv  run_32users_stats_history.csv  run_4users_stats.csv  run_4users_stats_history.csv  run_512users_stats.csv  run_512users_stats_history.csv  run_64users_stats.csv  run_64users_stats_history.csv  run_8users_stats.csv  run_8users_stats_history.csv
results/cpu/torch/: run_128users_stats.csv  run_128users_stats_history.csv  run_16users_stats.csv  run_16users_stats_history.csv  run_1users_stats.csv  run_1users_stats_history.csv  run_256users_stats.csv  run_256users_stats_history.csv  run_2users_stats.csv  run_2users_stats_history.csv  run_32users_stats.csv  run_32users_stats_history.csv  run_4users_stats.csv  run_4users_stats_history.csv  run_512users_stats.csv  run_512users_stats_history.csv  run_64users_stats.csv  run_64users_stats_history.csv  run_8users_stats.csv  run_8users_stats_history.csv
results/gpu/onnx/: run_128users_stats.csv  run_128users_stats_history.csv  run_16users_stats.csv  run_16users_stats_history.csv  run_1users_stats.csv  run_1users_stats_history.csv  run_256users_stats.csv  run_256users_stats_history.csv  run_2users_stats.csv  run_2users_stats_history.csv  run_32users_stats.csv  run_32users_stats_history.csv  run_4users_stats.csv  run_4users_stats_history.csv  run_512users_stats.csv  run_512users_stats_history.csv  run_64users_stats.csv  run_64users_stats_history.csv  run_8users_stats.csv  run_8users_stats_history.csv
results/gpu/tensorrt/: run_128users_stats.csv  run_128users_stats_history.csv  run_16users_stats.csv  run_16users_stats_history.csv  run_1users_stats.csv  run_1users_stats_history.csv  run_256users_failures.csv  run_256users_stats.csv  run_256users_stats_history.csv  run_2users_stats.csv  run_2users_stats_history.csv  run_32users_stats.csv  run_32users_stats_history.csv  run_4users_stats.csv  run_4users_stats_history.csv  run_512users_failures.csv  run_512users_stats.csv  run_512users_stats_history.csv  run_64users_stats.csv  run_64users_stats_history.csv  run_8users_stats.csv  run_8users_stats_history.csv
results/gpu/tensorrtwarm/: run_128users_failures.csv  run_128users_stats.csv  run_128users_stats_history.csv  run_16users_stats.csv  run_16users_stats_history.csv  run_1users_stats.csv  run_1users_stats_history.csv  run_256users_stats.csv  run_256users_stats_history.csv  run_2users_stats.csv  run_2users_stats_history.csv  run_32users_stats.csv  run_32users_stats_history.csv  run_4users_stats.csv  run_4users_stats_history.csv  run_512users_stats.csv  run_512users_stats_history.csv  run_64users_stats.csv  run_64users_stats_history.csv  run_8users_stats.csv  run_8users_stats_history.csv
results/plots/: summary.csv
scripts/: aws_deploy.py  export_onnx.py  plot_load_results.py
src/: app.py  config.py  inference_engine.py  metrics.py  model_loader.py  model_manager.py
tests/: test_app.py  test_config.py  test_export_onnx.py  test_inference_engine.py  test_metrics.py  test_model_loader.py  test_model_manager.py
tests/load/: locustfile.py
(+23 files in other folders)
