[project]
name = "simple-model-inference-api"
version = "0.1.0"
description = "A simple REST API for model inference using environment-based configuration."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
]
dependencies = [
    "uv",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "transformers",
    "pillow",
    "prometheus_client",
    "python-multipart"
]

[project.optional-dependencies]
# Activates the custom CUDA 12.6 wheels for GPU runtimes
gpu = [
    "torch",
    "torchvision",
    "torchaudio",
]
# Installs standard PyPI wheels (usually CPU or default fallback)
cpu = [
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.uv]
# Tells uv that a user cannot install both extras at the same time
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" }
    ]
]

[tool.uv.sources]
# When the "gpu" group is requested, use the custom wheel index
torch = [
  { index = "pytorch-cuda", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" }
]
torchvision = [
  { index = "pytorch-cuda", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" }
]
torchaudio = [
  { index = "pytorch-cuda", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126" # Match your CUDA version (e.g., cu126)
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.[^/]+|
    build|
    dist|
    \.venv|
    env|
    venv|
    __pycache__|
    .pytest_cache|
    .git|
    .github
)/
'''

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "pyright",
    "locust"
]